; ModuleID = '/home/carl/AnghaBench/netdata/database/engine/extr_rrdengineapi.c_rrdeng_get_page.c'
source_filename = "/home/carl/AnghaBench/netdata/database/engine/extr_rrdengineapi.c_rrdeng_get_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdengine_instance = type { i32 }
%struct.rrdeng_page_descr = type { %struct.page_cache_descr* }
%struct.page_cache_descr = type { i8* }

@D_RRDENGINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Reading existing page:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rrdeng_get_page(%struct.rrdengine_instance* %0, i32* %1, i32 %2, i8** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.rrdengine_instance*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca %struct.rrdeng_page_descr*, align 8
  %11 = alloca %struct.page_cache_descr*, align 8
  store %struct.rrdengine_instance* %0, %struct.rrdengine_instance** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8** %3, i8*** %9, align 8
  %12 = load i32, i32* @D_RRDENGINE, align 4
  %13 = call i32 @debug(i32 %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %6, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call %struct.rrdeng_page_descr* @pg_cache_lookup(%struct.rrdengine_instance* %14, i32* null, i32* %15, i32 %16)
  store %struct.rrdeng_page_descr* %17, %struct.rrdeng_page_descr** %10, align 8
  %18 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %10, align 8
  %19 = icmp eq %struct.rrdeng_page_descr* null, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i8**, i8*** %9, align 8
  store i8* null, i8** %21, align 8
  store i8* null, i8** %5, align 8
  br label %32

22:                                               ; preds = %4
  %23 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %10, align 8
  %24 = bitcast %struct.rrdeng_page_descr* %23 to i8*
  %25 = load i8**, i8*** %9, align 8
  store i8* %24, i8** %25, align 8
  %26 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %10, align 8
  %27 = getelementptr inbounds %struct.rrdeng_page_descr, %struct.rrdeng_page_descr* %26, i32 0, i32 0
  %28 = load %struct.page_cache_descr*, %struct.page_cache_descr** %27, align 8
  store %struct.page_cache_descr* %28, %struct.page_cache_descr** %11, align 8
  %29 = load %struct.page_cache_descr*, %struct.page_cache_descr** %11, align 8
  %30 = getelementptr inbounds %struct.page_cache_descr, %struct.page_cache_descr* %29, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  store i8* %31, i8** %5, align 8
  br label %32

32:                                               ; preds = %22, %20
  %33 = load i8*, i8** %5, align 8
  ret i8* %33
}

declare dso_local i32 @debug(i32, i8*) #1

declare dso_local %struct.rrdeng_page_descr* @pg_cache_lookup(%struct.rrdengine_instance*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
